objects/Activity_Plan__c.object
<CustomObject>
    <description>This Object is created for the POC Purpose.</description>
    <fields>
        <fullName>Active_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Activity_Subject__c</fullName>
        <label>Activity Subject</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Activity_Type__c</fullName>
        <label>Activity Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Automated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Automated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Business_Group__c</fullName>
        <label>Business Group</label>
        <picklist>
            <picklistValues>
                <fullName>EG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ESSN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HPFS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cross-BG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OTHER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PPS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GBU__c</fullName>
        <label>GBU</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Param01__c</fullName>
        <label>Param01</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Type__c</fullName>
        <description>This can have Opportunity Record Type values like Renewal, Standard or Partner.</description>
        <label>Record Type</label>
        <picklist>
            <picklistValues>
                <fullName>Renewal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <picklist>
            <picklistValues>
                <fullName>Americas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APJ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Renewal_Sub_type__c</fullName>
        <description>This contains Renewal Sup Type Values</description>
        <label>Renewal Sub type</label>
        <picklist>
            <picklistValues>
                <fullName>ELA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multi BG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multinational</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PROP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Push To</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Renewal_Type__c</fullName>
        <description>This contains SW Renewal and TS Renewal Values</description>
        <label>Renewal Type</label>
        <picklist>
            <picklistValues>
                <fullName>SW Renewal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TS Renewal</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sales_Stage__c</fullName>
        <label>Sales Stage</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <description>This Picklist will consist the corresponding Opportunity Stage Value for which a particular Activity Plan is created.</description>
        <label>Stage</label>
        <picklist>
            <picklistValues>
                <fullName>00-Deal Registration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>01 - Understand Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02 - Validate Opportunity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03 - Qualify the Opportunity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04A - Develop Solution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04B - Propose Solution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>05 - Negotiate &amp; Close</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>06 - Won, Deploy &amp; Expand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lost</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HP Not Pursued</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Error</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TOV_Range_From__c</fullName>
        <label>TOV Range From</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TOV_Range_To__c</fullName>
        <label>TOV Range To</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Activity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MileStone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Header</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Template</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>private_type__c</fullName>
        <label>private type</label>
        <picklist>
            <picklistValues>
                <fullName>UK Public Sector</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US Public Sector</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Activity Template</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Activity Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Activity Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>